tests/checker/ok/multiline_constructor_args.can
First = String

Pair = First * Second

Second = String

Unit => Program {
    "hello" -> First -> Pair("world" -> Second).First -> Print
}
