tests/checker/fail/comma_params.can
Pair = Left * Right

Left = Int

Right = Int

Pair = (Left, Right) => Pair {
    Pair(Left * Right)
}

Unit => Program {
    Pair(1 -> Left * 2 -> Right) -> Left -> String -> Print
}
